# meteor

./: .gitignore  LICENSE  README.md  build-deb.sh  meson.build  meteor.desktop
debian/: changelog  control  meteor-dev.install  meteor.examples  meteor.install  not-installed  rules
debian/libmeteor-touch-dev/DEBIAN/: control  md5sums
debian/libmeteor-utils-dev/DEBIAN/: control  md5sums
debian/libmeteor-utils-dev/usr/lib/x86_64-linux-gnu/pkgconfig/: wf-utils.pc
debian/libmeteor-utils0t64/DEBIAN/: control  md5sums  shlibs
debian/libmeteor-utils0t64/usr/lib/x86_64-linux-gnu/: libwf-utils.so.0  libwf-utils.so.0.4.0
man/: meson.build
metadata/: meson.build
plugins/: meson.build
plugins/animate/: meson.build  squeezimize.hpp
plugins/blur/: meson.build
plugins/common/: meson.build
plugins/cube/: meson.build
plugins/decor/: meson.build
plugins/grid/: meson.build
plugins/tile/: meson.build  tile-wset.hpp
plugins/vswitch/: meson.build
plugins/window-rules/: meson.build
plugins/winshadows/: meson.build
plugins/wm-actions/: meson.build
plugins/wobbly/: meson.build
proto/: meson.build
src/: default-config-backend.cpp  meson.build
src/api/wayfire/nonstd/: wlroots-full.hpp  wlroots.hpp
src/core/: output-layout.cpp
src/core/seat/: cursor.cpp  keyboard.cpp  pointer.cpp  seat.cpp
src/view/layer-shell/: layer-shell-node.cpp
